tests/NormalTests/paczka1/fuzzy1/18634155.err
Error in line 12: Plr42Qf S579 -1,3
Error in line 3: Mjg S579 88,4
Error in line 2: xWNY S49 14,8
Error in line 22: Mjg S27 14,3
Error in line 33: xWNY S579 65,8
Error in line 37: Plr42Qf S579 13,8
